mongodb/dev/mongo-express-deploy.yaml
# vi mongo-express-deploy.yaml
#- name: ME_CONFIG_MONGODB_SERVER
#value: "example-mongodb-0.example-mongodb-svc.mongodb.svc.cluster.local,example-mongodb-1.example-mongodb-svc.mongodb.svc.cluster.local,example-mongodb-2.example-mongodb-svc.mongodb.svc.cluster.local"

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      restartPolicy: Always
      containers:
      - name: mongo-express
        image: mongo-express:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
