mongodb/dev/mongodb-deployment-civo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deploy
spec:
  strategy:
    type: "RollingUpdate"
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  
  minReadySeconds: 5

  replicas: 1

  selector:
    matchLabels:
      app: mongodb

  template:
    metadata:
      name: mongodb-pod
      labels:
        app: mongodb
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - k3s-ckad-c139-bee81d-node-pool-c73f-zc9wp
      containers:
        - name: mongodb-container
          image: mongo:6.0.10
            #imagePullPolicy: "Always"
          args: ["--dbpath", "/data/mongo/mongo610"]
          ports:
          - containerPort: 27017
          securityContext:
            runAsUser: 0
            privileged: true
#          livenessProbe:
#            exec:
#              command:
#                - mongosh
#                - --disableImplicitSessions
#                - --eval
#                - "db.adminCommand('ping')"
#            initialDelaySeconds: 30
#            periodSeconds: 10
#            timeoutSeconds: 5
#            successThreshold: 1
#            failureThreshold: 6
#          readinessProbe:
#            exec:
#              command:
#                - mongosh
#                - --disableImplicitSessions
#                - --eval
#                - "db.adminCommand('ping')"
#            initialDelaySeconds: 30
#            periodSeconds: 10
#            timeoutSeconds: 5
#            successThreshold: 1
#            failureThreshold: 6
          volumeMounts:
            - mountPath: /data/mongo/mongo610
              name: mongodb-data-dir

      volumes:
        - name: mongodb-data-dir
          persistentVolumeClaim:
            claimName: mongodb-data-pvc
