mongodb/dev/mongo-express-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-nodeport-service
spec:
  type: NodePort
  selector:
    app: mongo-express
  ports:
  - name: http
    protocol: TCP
    port: 8081
    targetPort: 8081
    nodePort: 30909
