mongodb/dev/mongo-express-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
spec:
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 8081
    targetPort: 8081
  selector:
    app: mongo-express
