mongodb/dev/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: mongodb-service
spec: 
  ports: 
  - name: mongodb
    protocol: TCP
    port: 27017
    targetPort: 27017
  
#  clusterIP: None
  selector: 
      app: mongodb
