mongodb/dev/mongodb-namespace-inress-rule.yaml
# vi dev-namespace-inress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongodb-namespace-inress-rule
#  annotations:
#    nginx.ingress.kubernetes.io/ssl-redirect: "false"
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host:
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongo-express-service
            port:
              number: 8081
